<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Refresh-->
    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:title=""
        app:showAsAction="ifRoom" />

    <!--Connect-->
    <item
        android:id="@+id/menu_connect"
        android:orderInCategory="100"
        android:title="@string/menu__lbl__connect"
        app:showAsAction="ifRoom|withText" />

    <!--Disconnect-->
    <item
        android:id="@+id/menu_disconnect"
        android:orderInCategory="101"
        android:title="@string/menu__lbl__disconnect"
        app:showAsAction="ifRoom|withText" />

    <!--Bond-->
    <item
        android:id="@+id/menu_bond"
        android:orderInCategory="102"
        android:title="@string/menu__lbl__bond"
        app:showAsAction="ifRoom" />

    <!--Bond-->
    <item
        android:id="@+id/menu_enable_services"
        android:orderInCategory="103"
        android:title="@string/menu__lbl__enable_all_services"
        app:showAsAction="ifRoom" />


</menu>
